chore: finish user migration - 9 (#1188)