@@ -247,9 +247,9 @@ public class UserService extends ModelService {
         return userRepository.findByUsernameLikeIgnoreCase(username);
     }
 
-    public Optional<User> findByPublicKey(String publicKey) {
+    public Optional<UserResponse> findByPublicKey(String publicKey) {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
-        return userRepository.findByPublicKey(publicKey);
+        return userRepository.findByPublicKey(publicKey).map(userMapper::map);
     }
 
     public AuthInformation getAuthenticationRoles(UserResponse user) {
@@ -523,8 +523,7 @@ public class UserService extends ModelService {
         String select = "select distinct user ";
         String from =
             "from ProjectRepresentativeUser r right outer join User user ON (r.userId = user.id and r.project.id = "
-                + project.getId() + "), "
-                + "AclObjectIdentity as aclObjectId, AclEntry as aclEntry, AclSid as aclSid ";
+                + project.getId() + "), " + "AclObjectIdentity as aclObjectId, AclEntry as aclEntry, AclSid as aclSid ";
         String where =
             "where aclObjectId.objectId = " + project.getId() + " " + "and aclEntry.aclObjectIdentity = aclObjectId "
                 + "and aclEntry.sid = aclSid " + "and aclSid.sid = user.username ";
@@ -546,8 +545,9 @@ public class UserService extends ModelService {
         }
 
         if (projectRoleSearch.isPresent()) {
-            List<String> roles = (projectRoleSearch.get().getValue() instanceof String) ? List.of(
-                (String) projectRoleSearch.get().getValue()) : (List<String>) projectRoleSearch.get().getValue();
+            List<String> roles = (projectRoleSearch.get().getValue() instanceof String)
+                ? List.of((String) projectRoleSearch.get().getValue())
+                : (List<String>) projectRoleSearch.get().getValue();
             having += " HAVING MAX(CASE WHEN r.id IS NOT NULL THEN 'representative' "
                 + "WHEN aclEntry.mask = 16 THEN 'manager' " + "ELSE 'contributor' END) IN (" + roles.stream()
                 .map(x -> "'" + x + "'").collect(Collectors.joining(",")) + ")";
@@ -597,15 +597,15 @@ public class UserService extends ModelService {
 
     }
 
-    public List<User> listAdmins(Project project) {
+    public List<UserResponse> listAdmins(Project project) {
         return listAdmins(project, true);
     }
 
-    public List<User> listAdmins(Project project, boolean checkPermission) {
+    public List<UserResponse> listAdmins(Project project, boolean checkPermission) {
         if (checkPermission) {
             securityACLService.check(project, READ);
         }
-        return userRepository.findAllAdminsByProjectId(project.getId());
+        return userRepository.findAllAdminsByProjectId(project.getId()).stream().map(userMapper::map).toList();
     }
 
     public Optional<User> findCreator(Project project) {
@@ -613,14 +613,14 @@ public class UserService extends ModelService {
         return aclRepository.listCreators(project.getId()).stream().findFirst();
     }
 
-    public List<User> listUsers(Project project) {
+    public List<UserResponse> listUsers(Project project) {
         securityACLService.check(project, READ);
-        return userRepository.findAllUsersByProjectId(project.getId());
+        return userRepository.findAllUsersByProjectId(project.getId()).stream().map(userMapper::map).toList();
     }
 
-    public List<User> listUsers(long ontologyId) {
+    public List<UserResponse> listUsers(long ontologyId) {
         //TODO:: Not optim code a single SQL request will be very faster
-        List<User> users = new ArrayList<>();
+        List<UserResponse> users = new ArrayList<>();
         List<Project> projects = projectRepository.findAllByOntologyId(ontologyId);
         for (Project project : projects) {
             users.addAll(listUsers(project));
@@ -633,7 +633,7 @@ public class UserService extends ModelService {
         return userRepository.findAllUsersByStorageId(storage.getId());
     }
 
-    public List<User> listAll(Project project) {
+    public List<UserResponse> listAll(Project project) {
         return new ArrayList<>(listUsers(project));
     }
 
@@ -641,33 +641,32 @@ public class UserService extends ModelService {
      * List all layers from a project Each user has its own layer If project has private layer, just get current user
      * layer
      */
-    public List<JsonObject> listLayers(Project project) {
+    public List<UserResponse> listLayers(Project project) {
         UserResponse currentUser = currentUserService.getCurrentUser();
         securityACLService.check(project, READ, currentUser);
 
-        List<User> humanAdmins = listAdmins(project);
-        List<User> humanUsers = listUsers(project);
+        List<UserResponse> humanAdmins = listAdmins(project);
+        List<UserResponse> humanUsers = listUsers(project);
 
-        List<JsonObject> humanUsersFormatted = humanUsers.stream().map(u -> u.toJsonObject(urlApi)).toList();
+        List<UserResponse> humanUsersFormatted = humanUsers.stream().toList();
 
-        List<JsonObject> layersFormatted = new ArrayList<>();
+        List<UserResponse> layersFormatted = new ArrayList<>();
 
         if (permissionService.hasACLPermission(project, ADMINISTRATION, currentRoleService.isAdminByNow(currentUser))
             || (!project.isHideAdminsLayers() && !project.isHideUsersLayers())) {
             layersFormatted.addAll(humanUsersFormatted);
         } else if (project.isHideAdminsLayers() && !project.isHideUsersLayers()) {
-            Set<Long> humanAdminsIds = humanAdmins.stream().map(CytomineDomain::getId).collect(Collectors.toSet());
+            Set<Long> humanAdminsIds = humanAdmins.stream().map(UserResponse::id).collect(Collectors.toSet());
             layersFormatted.addAll(
-                humanUsersFormatted.stream().filter(x -> !humanAdminsIds.contains(x.getJSONAttrLong("id"))).toList());
+                humanUsersFormatted.stream().filter(x -> !humanAdminsIds.contains(x.id())).toList());
         } else if (!project.isHideAdminsLayers()) {
-            layersFormatted.addAll(humanAdmins.stream().map(u -> u.toJsonObject(urlApi)).toList());
+            layersFormatted.addAll(humanAdmins.stream().toList());
         }
 
-        boolean isProjectMember = humanUsers.stream().anyMatch(u -> u.getId().equals(currentUser.id()));
-        boolean hasOwnLayer = layersFormatted.stream()
-            .anyMatch(x -> x.getJSONAttrLong("id").equals(currentUser.id()));
+        boolean isProjectMember = humanUsers.stream().anyMatch(u -> u.id() == currentUser.id());
+        boolean hasOwnLayer = layersFormatted.stream().anyMatch(x -> x.id() == currentUser.id());
         if (isProjectMember && !hasOwnLayer) {
-            layersFormatted.add(userMapper.map(currentUser).toJsonObject(urlApi));
+            layersFormatted.add(currentUser);
         }
 
         return layersFormatted;
@@ -676,7 +675,7 @@ public class UserService extends ModelService {
     public List<JsonObject> getAllOnlineUserWithTheirPositions(Project project) {
         //Get all project user online
         List<Long> usersId = this.getAllFriendsUsersOnline(currentUserService.getCurrentUserOld(), project).stream()
-            .map(CytomineDomain::getId).collect(Collectors.toList());
+            .map(UserResponse::id).collect(Collectors.toList());
         List<JsonObject> usersWithPosition = userPositionService.findUsersPositions(project);
         usersId.removeAll(usersWithPosition.stream().map(JsonObject::getId).toList());
 
@@ -713,7 +712,7 @@ public class UserService extends ModelService {
 
     public List<JsonObject> getUsersWithLastActivities(Project project) {
         List<JsonObject> results = new ArrayList<>();
-        List<User> users = listUsers(project).stream().sorted(Comparator.comparing(CytomineDomain::getId)).toList();
+        List<UserResponse> users = listUsers(project).stream().sorted(Comparator.comparing(UserResponse::id)).toList();
 
         Map<Long, JsonObject> connections =
             projectConnectionService.lastConnectionInProject(project, null, "user", "asc", 0L, 0L).stream()
@@ -725,17 +724,17 @@ public class UserService extends ModelService {
             imageConsultationService.lastImageOfUsersByProject(project, null, "user", "asc", 0L, 0L).stream()
                 .collect(Collectors.toMap(x -> x.getJSONAttrLong("user"), Function.identity()));
 
-        for (User user : users) {
+        for (UserResponse user : users) {
             if (user != null) {
-                JsonObject image = images.get(user.getId());
-                JsonObject connection = connections.get(user.getId());
-                JsonObject frequency = frequencies.get(user.getId());
+                JsonObject image = images.get(user.id());
+                JsonObject connection = connections.get(user.id());
+                JsonObject frequency = frequencies.get(user.id());
 
                 JsonObject jsonObject = new JsonObject();
-                jsonObject.put("id", user.getId());
-                jsonObject.put("username", user.getUsername());
-                jsonObject.put("name", user.getName());
-                jsonObject.put("fullName", user.getFullName());
+                jsonObject.put("id", user.id());
+                jsonObject.put("username", user.username());
+                jsonObject.put("name", user.name());
+                jsonObject.put("fullName", user.fullName());
                 jsonObject.put("lastImageId", (image != null ? image.get("image") : null));
                 jsonObject.put("lastImageName", (image != null ? image.get("imageName") : null));
                 jsonObject.put("lastConnection", (connection != null ? connection.get("created") : null));
@@ -750,14 +749,14 @@ public class UserService extends ModelService {
     /**
      * Get all online user
      */
-    public List<User> getAllOnlineUsers() {
+    public List<UserResponse> getAllOnlineUsers() {
         securityACLService.checkGuest(currentUserService.getCurrentUser());
         //get date with -X secondes
         Date xSecondAgo = DateUtils.addSeconds(new Date(), -300);
         // TODO: could be improve regarding performance...
         List<LastConnection> connections = lastConnectionRepository.findAllByCreatedAfter(xSecondAgo);
         List<Long> userIds = connections.stream().map(LastConnection::getUser).distinct().collect(Collectors.toList());
-        return userRepository.findAllByIdIn(userIds);
+        return userRepository.findAllByIdIn(userIds).stream().map(userMapper::map).toList();
     }
 
     /**
@@ -785,29 +784,28 @@ public class UserService extends ModelService {
     /**
      * Get all user that share at least a same project as user from argument
      */
-    public List<User> getAllFriendsUsers(User user) {
+    public List<UserResponse> getAllFriendsUsers(User user) {
         securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
-        return userRepository.findAllUsersSharingAccessToSameProject(user.getUsername());
+        return userRepository.findAllUsersSharingAccessToSameProject(user.getUsername()).stream().map(userMapper::map)
+            .toList();
     }
 
     /**
      * Get all online user that share at least a same project as user from argument
      */
-    public List<User> getAllFriendsUsersOnline(User user) {
+    public List<UserResponse> getAllFriendsUsersOnline(User user) {
         securityACLService.checkIsSameUser(user, currentUserService.getCurrentUser());
-        List<User> friends = getAllFriendsUsers(user);
-        List<User> friendsOnline =
-            getAllOnlineUsers().stream().distinct().filter(friends::contains).collect(Collectors.toList());
-        return friendsOnline;
+        List<UserResponse> friends = getAllFriendsUsers(user);
+        return getAllOnlineUsers().stream().distinct().filter(friends::contains).toList();
     }
 
     /**
      * Get all user that share at least a same project as user from argument and
      */
-    public List<User> getAllFriendsUsersOnline(User user, Project project) {
+    public List<UserResponse> getAllFriendsUsersOnline(User user, Project project) {
         securityACLService.check(project, READ);
         //no need to make insterect because getAllOnlineUsers(project) contains only friends users
-        return getAllOnlineUsers(project);
+        return getAllOnlineUsers(project).stream().map(userMapper::map).toList();
     }
 
     public User regenerateKeys(User user) {
@@ -835,8 +833,7 @@ public class UserService extends ModelService {
                 List.of(json.getJSONAttrStr("role").substring(5)));
 
             accountService.createAccount(account);
-            CommandResponse response = executeCommand(new AddCommand(currentUser.id()), null,
-                json);
+            CommandResponse response = executeCommand(new AddCommand(currentUser.id()), null, json);
 
             return response;
         }
@@ -1044,7 +1041,8 @@ public class UserService extends ModelService {
     public void deleteDependentProjectRepresentativeUser(User user, Transaction transaction, Task task) {
         if (user instanceof User) {
             for (ProjectRepresentativeUser projectRepresentativeUser :
-                projectRepresentativeUserRepository.findAllByUserId(user.getId())) {
+                projectRepresentativeUserRepository.findAllByUserId(
+                    user.getId())) {
                 projectRepresentativeUserService.delete(projectRepresentativeUser, transaction, null, false);
             }
         }
